# candidate-data-transformer

./: .gitattributes  .gitignore  README.md  package-lock.json  pyproject.toml
dataset/: README.md
dataset/csv/: 01_clean_candidates.csv  02_duplicates_and_multivalue.csv  03_spellings_and_aliases.csv  04_invalid_and_malformed.csv  05_missing_fields.csv  06_unknown_columns.csv  07_urls_edge_cases.csv  08_header_only_empty.csv  10_conflicts_vs_resume.csv
dataset/json/: ats_export.json  github_profile.json
dataset/json_future/: ats_export.json  github_profile.json
dataset/notes/: recruiter_notes.txt
docs/: DESIGN.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
project_knowledge/: PROJECT_KNOWLEDGE_BASE.md  PROJECT_STATUS.md  assignment.md
samples/: candidates.csv  github_jane.json  projection_ats.yaml  projection_minimal.json
scripts/: benchmark.py  diagnose_resume.py  make_dataset.py  make_sample_resume.py
src/: cli.py  pipeline.py  serialize.py  verify.py
src/api/: app.py  store.py
src/confidence/: __init__.py  score.py
src/extractors/: __init__.py  ats_extractor.py  base.py  csv_extractor.py  github_extractor.py  (+2 more)
tests/: test_api.py  test_ats_extractor.py  test_benchmark.py  test_completeness.py  test_github_extractor.py  test_merge.py  test_models.py  test_normalizers.py  test_notes_extractor.py  test_pipeline.py  test_resolution.py  test_resume_extractor.py  test_skill_penalty.py  test_validators.py  test_verify_linkedin.py
web/: app.js  index.html  styles.css
(+42 files in other folders)
