[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-data-transformer"
version = "0.1.0"
description = "Deterministic candidate data transformation engine with provenance, confidence, and configurable projection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "python-dateutil>=2.8",
    "phonenumbers>=8.13",
    "pycountry>=23.12",
    "rapidfuzz>=3.6",
    "pdfplumber>=0.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "reportlab>=4.0", "httpx>=0.27"]

[project.scripts]
candidate-transform = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
